- ImageTileController.java: Set tile background to blue on hover - DownloadImagesTask.java: Fix case where filenames would get mangled - ScanPinterestBoardTask.java: Fix settings incomplete URI for pin - CookieJar.java: Require an expiry time when storing cookies - WebDriverPool.java: Shutdown browser after one minute of idle time - TextUtils.java: Fix #getFileSystemSafeName generating incompatible strings - PinterestWebSession.java: Move script locations to scraper-data.properties